--- a/scss/base/_layout.scss
+++ b/scss/base/_layout.scss
@@ -40,5 +40,12 @@ body {
     @include media(max-width $medium-screen-landscape) {
         width: 100%;
         float: none;
+        padding: 0;
+    }
+}
+
+.columns_wrap {
+    @include media(max-width $medium-screen-landscape) {
+        margin: 0;
     }
 }
